# Trabajo-Casino

./: README.md
CasinoDeGonsino/: CMakeLists.txt  main.cpp
CasinoDeGonsino/Doc/: Casino.drawio
CasinoDeGonsino/Model/: AdivinaAdivinador.cpp  AdivinaAdivinador.h  Casino.cpp  Casino.h  DosColores.cpp  DosColores.h  ElMayorDe13.cpp  ElMayorDe13.h  Juego.h  Usuario.cpp  Usuario.h
CasinoDeGonsino/View/: View.cpp  View.h
